# RAGERaps

./: .gitignore  README.md  README_visualization.md  pyproject.toml  visualize_battle_graph.py  visualize_graph.py
backend/: .env.example  RAG_INTEGRATION.md  main.py  pyproject.toml  sample_artists.csv  test_rag_integration.py
backend/app/: __init__.py
backend/app/agents/: judge_agent.py  parallel_workflow.py  rapper_agent.py
backend/app/api/: router.py
backend/app/api/routes/: artists.py  battles.py  health.py
backend/app/core/: config.py
backend/app/db/: database.py  init_styles.py  interfaces.py
backend/app/db/repositories/: battle_repo.py  style_repo.py
backend/app/models/: artist.py  battle.py  judgment.py  rapper.py  round.py  verse.py
backend/app/services/: battle_crud_service.py  battle_orchestration_service.py  battle_service.py  csv_processor_service.py  data_cache_service.py  data_pipeline_service.py  judgment_service.py  prompt_service.py  round_management_service.py  vector_store_service.py  verse_generation_service.py
backend/app/tools/: __init__.py  artist_retrieval_tool.py  csv_merger.py  search_tool.py  style_tool.py
backend/app/utils/: common.py
backend/csv_chunker/: artist.py  csv_merger.py  csv_processor.py
backend/prompts/: battle_prompts.toml  evaluation_prompts.toml  rapper_prompts.toml  system_prompts.toml
backend/tests/: test_parallel_workflow.py
backend/visualization/: README.md  __init__.py  cli.py  generate_graph.py  mock_graph.py  notebook_example.py  visualize_graphs.py
mcp_server/: .env.example  README.md  __init__.py  pyproject.toml  requirements.txt  server.py
(+38 files in other folders)
